# robodsl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  COMPREHENSIVE_TESTING_SUMMARY.md  DEVELOPER_GUIDE.md  Dockerfile.debian  Dockerfile.minimal  INSTALL.md  MANIFEST.in  PLAN.md  README.md  TODO.md  add-to-repo.sh  build-deb-direct.sh  clean.sh  debug_cpp_parsing.py  debug_onnx.py  debug_output.txt  debug_pattern.py  debug_tuple.py  fix_brackets.py  fixed js  install-repo.sh  install.sh  last_test_output.txt  package.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  run_linux_tests.sh  setup-apt-repo.sh  setup.py  test-install.sh  test_cuda_includes.py  test_generator.py  test_grammar.py  test_output.txt
examples/: 01_autonomous_navigation_system.robodsl  02_computer_vision_processing.robodsl  03_industrial_robot_control.robodsl  04_drone_swarm_control.robodsl  05_autonomous_vehicle_system.robodsl  CMakeLists.txt  README.md  advanced_cpp_example.robodsl  bracket_test.robodsl  comprehensive_example.robodsl  cuda_kernel_example.robodsl  example1.robodsl  ml_pipeline_example.robodsl  onnx_example.robodsl  package.xml  pipeline_example.robodsl  raw_cpp_example.robodsl  ros2_cuda_integration.robodsl  tensorrt_example.robodsl  test_const_support.robodsl  test_simple.robodsl
examples/comprehensive_test/: CMakeLists.txt  LINUX_SETUP.md  README.md  build_config.cmake  comprehensive_test.robodsl  package.xml  test_build.sh  test_cuda_runtime.sh  test_full_system.sh  test_performance.sh  test_robodsl_cli.sh  test_ros2_integration.sh
examples/comprehensive_test/cmake/: classification_model_onnx.cmake  detection_model_onnx.cmake  main_node_onnx.cmake  segmentation_model_onnx.cmake
examples/comprehensive_test/include/: advanced_features.hpp
examples/comprehensive_test/include/cuda/: image_filter_kernel.cuh  image_filter_wrapper.hpp  matrix_multiply_kernel.cuh  matrix_multiply_wrapper.hpp  vector_add_kernel.cuh  vector_add_wrapper.hpp
examples/comprehensive_test/include/nodes/: robot_cpp_node_node.hpp
examples/comprehensive_test/include/onnx/: classification_model_onnx.hpp  detection_model_onnx.hpp  main_node_onnx.hpp  segmentation_model_onnx.hpp
examples/comprehensive_test/launch/: main_launch.py  main_node_launch.py  navigation_node_launch.py  perception_node_launch.py  robot_cpp_node_launch.py  safety_node_launch.py
examples/comprehensive_test/src/cuda/: image_filter_kernel.cu  matrix_multiply_kernel.cu  vector_add_kernel.cu
examples/comprehensive_test/src/nodes/: robot_cpp_node_node.cpp
examples/comprehensive_test/src/onnx/: classification_model_onnx.cpp  detection_model_onnx.cpp  main_node_main.cpp  main_node_onnx.cpp  segmentation_model_onnx.cpp
examples/comprehensive_test/src/pipelines/: classification_node.cpp  classification_onnx.cpp  detection_node.cpp  detection_onnx.cpp  fusion_node.cpp  obstacle_avoidance_node.cpp  path_following_node.cpp  path_planning_node.cpp  preprocessing_cuda.cpp  preprocessing_node.cpp  segmentation_node.cpp  segmentation_onnx.cpp
examples/comprehensive_test/src/utils/: global_cpp_code_0.cpp
examples/general_controller/: general_controller.robodsl
examples/include/robodsl/: my_node_node.hpp
examples/include/robodsl_project/: lifecycle_node.hpp  minimal_node.hpp  my_node.hpp  param_node.hpp  param_types_node.hpp  qos_node.hpp  timer_node.hpp
examples/lqr_controller/: lqr_controller.robodsl
examples/mpc_controller/: mpc_controller.robodsl
examples/mppi_robot/src/: help_node.py
examples/mppi_stress/: mppi_stress.robodsl
examples/pid_controller/: pid_controller.robodsl
examples/robot/: CMakeLists.txt  README.md  build_config.cmake  package.xml  robot.robodsl
examples/robot/include/: main_node_node.hpp  vector_add_kernel.cuh
examples/robot/launch/: main_launch.py
examples/robot/src/: main_node_node.cpp  main_node_node.py  vector_add_kernel.cu
examples/robot1/: controller.robodsl  robot1.robodsl
examples/robot1/robodsl/: robot1.robodsl
examples/robot1/src/: controller_node.py
examples/rrt_planner/: rrt_planner.robodsl
examples/src/: comprehensive_processor_node.cpp  data_processor_node.cpp  image_preprocessing_node.cpp  image_preprocessing_node.py  lifecycle_node.cpp  minimal_node.cpp  my_node.cpp  neural_network_kernel_kernel.cu  object_detection_cuda.cpp  object_detection_node.cpp  object_detection_node.py  object_detection_onnx.cpp  param_node.cpp  param_types_node.cpp  post_processing_node.cpp  post_processing_node.py  qos_node.cpp  simple_publisher_node.cpp  timer_node.cpp
examples/src/cuda/: thrust_example_kernels.cu
examples/traj_follower/: traj_follower.robodsl
examples/vector_ops/: vector_ops.robodsl
generated_projects/autonomous_navigation_system/: CMakeLists.txt  README.md  package.xml
generated_projects/autonomous_navigation_system/cmake/: semantic_segmentation_onnx.cmake  yolo_detector_onnx.cmake
generated_projects/autonomous_navigation_system/launch/: autonomous_navigator_launch.py  main_launch.py  robot_localizer_launch.py
generated_projects/computer_vision_processing/: CMakeLists.txt  README.md
generated_projects/computer_vision_processing/cmake/: depth_estimation_onnx.cmake  face_recognition_onnx.cmake  object_detector_onnx.cmake  optical_flow_onnx.cmake  pose_estimation_onnx.cmake
generated_projects/computer_vision_processing/launch/: camera_synchronizer_launch.py  main_launch.py  vision_processor_launch.py
src/robodsl/utils/: CMakeLists.txt  __init__.py  librobodsl_typecheck.dylib  robodsl_typecheck.cpp  typecheck_bridge.py
test_output/: CMakeLists.txt  README.md  build_config.cmake  package.xml
test_output/include/: image_filter_wrapper.hpp  matrix_multiply_kernel.cuh  simple_test_kernel.cuh  vector_add_wrapper.hpp
test_output/launch/: main_launch.py
test_output/ros2/include/: test_node_node.hpp
test_output/src/: image_filter_kernel.cu  matrix_multiply_kernel.cu  simple_test_kernel.cu  vector_add_kernel.cu
tools/extension/robodsl2/: README.md  pyproject.toml  requirements.txt  robodsl-ls
tools/extension/robodsl2/extension/: LICENSE  (+6 more)
(+518 files in other folders)
