[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodsl"
version = "0.1.0"
description = "A DSL for GPU-accelerated robotics applications with ROS2 and CUDA"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ishayu Shikhare", email = "ishikhar@andrew.cmu.edu"}
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Code Generators',
    'Topic :: Scientific/Engineering',
]
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/Zedonkay/robodsl"

[project.scripts]
robodsl = "robodsl.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }

[tool.setuptools.package-data]
"*" = ["*.robodsl"]
