<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robodsl_package</name>
  <version>0.1.0</version>
  <description>Generated ROS2 package from RoboDSL specification</description>
  <maintainer email="robodsl@example.com">robodsl</maintainer>
  <license>Apache-2.0</license>

  <url type="website">https://github.com/robodsl/robodsl_package</url>
  <url type="bugtracker">https://github.com/robodsl/robodsl_package/issues</url>
  <url type="repository">https://github.com/robodsl/robodsl_package.git</url>

  <author email="robodsl@example.com">robodsl</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>



  <depend>cuda</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    
    <ament_cmake_export_include_directories>
      include
    </ament_cmake_export_include_directories>
    
    <ament_cmake_export_libraries>
      ${PROJECT_NAME}_lib
      ${PROJECT_NAME}_cuda
    </ament_cmake_export_libraries>
    
    <ament_cmake_export_dependencies>
      rclcpp
      std_msgs
      geometry_msgs
    </ament_cmake_export_dependencies>
    
    <ament_cmake_export_targets>
      export_${PROJECT_NAME}
    </ament_cmake_export_targets>
  </export>
</package>
